--- a/package.json
+++ b/package.json
@@ -3,15 +3,10 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "node src/server.js",
-    "postinstall": "prisma generate"
+    "start": "node src/server.js"
   },
   "dependencies": {
-    "@prisma/client": "^5.8.1",
-    "cookie-parser": "^1.4.6",
+    "@prisma/client": "^5.8.0",
     "express": "^4.19.2"
-  },
-  "devDependencies": {
-    "prisma": "^5.8.1"
   }
 }
