--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "ip-link-tracker",
-  "type": "module",
   "version": "1.0.0",
-  "main": "server.js",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "prisma generate && node src/server.js"
   },
   "dependencies": {
-    "better-sqlite3": "^9.4.0",
-    "cookie-parser": "^1.4.6",
+    "@prisma/client": "^5.10.0",
     "express": "^4.19.2"
+  },
+  "engines": {
+    "node": "22.x"
   }
 }
