--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "ip-link-tracker",
   "version": "1.0.0",
-  "private": true,
   "type": "module",
   "scripts": {
-    "start": "prisma generate && node src/server.js"
+    "start": "npx prisma generate && node src/server.js"
   },
   "dependencies": {
-    "@prisma/client": "^5.10.0",
-    "prisma": "^5.10.0",
+    "@prisma/client": "^5.22.0",
     "express": "^4.19.2"
   },
-  "engines": {
-    "node": "22.x"
+  "devDependencies": {
+    "prisma": "^5.22.0"
   }
 }
