--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "cookie-parser": "^1.4.6"
   },
   "devDependencies": {
     "prisma": "^5.22.0"
