--- a/package.json
+++ b/package.json
@@ -3,14 +3,11 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "npx prisma generate && node src/server.js"
+    "start": "node src/server.js"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
     "express": "^4.19.2",
-    "cookie-parser": "^1.4.6"
-  },
-  "devDependencies": {
-    "prisma": "^5.22.0"
+    "cookie-parser": "^1.4.6",
+    "better-sqlite3": "^9.4.0"
   }
 }
